--- a/index.html
+++ b/index.html
@@ -6,22 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/524757eaf3.js" crossorigin="anonymous"></script>
 <body>
     <div class="display">
         <div class="display__top">
             <div class="display__options">
-                <span class="display__icon">aiman</span>
-                <span class="display__icon">wahizam</span>
+                <span class="display__light"><i class="fa-regular fa-sun"></i></span>
+                <span class="display__dark"><i class="fa-regular fa-moon"></i></span>
             </div>
         </div>
 
         <div class="display__bottom">   
-            <div class="display__memory"></div>
-            <div class="display__current"></div>
+            <div class="display__memory">1234</div>
+            <div class="display__current">1234</div>
         </div> 
     </div>
 
     <div class="inputs">
+        <div class="inputs__button inputs__button--color-one" id="AC">
+
+        </div>
+        <div class="inputs__button inputs__button--color-one" id="plusMinus">
+
+        </div>
+        <div class="inputs__button inputs__button--color-one" id="percentage">
+
+        </div>
+        <div class="inputs__button inputs__button--color-two" id="divide">
+
+        </div>
+        <div class="inputs__button inputs__button--color-two" id="multiply">
+
+        </div>
+        <div class="inputs__button inputs__button--color-two" id="subtract">
+
+        </div>
+        <div class="inputs__button inputs__button--color-two" id="add">
+
+        </div>
+        <div class="inputs__button inputs__button--color-two" id="equals">
+
+        </div>
+        <div class="inputs__button" id="0">
+
+        </div>
+        <div class="inputs__button" id="1">
+
+        </div>
+        <div class="inputs__button" id="2">
+
+        </div>
+        <div class="inputs__button" id="3">
+
+        </div>
+        <div class="inputs__button" id="4">
+
+        </div>
+        <div class="inputs__button" id="5">
+
+        </div>
+        <div class="inputs__button" id="6">
+
+        </div>
+        <div class="inputs__button" id="7">
+
+        </div>
+        <div class="inputs__button" id="8">
+
+        </div>
+        <div class="inputs__button" id="9">
+
+        </div>
+        <div class="inputs__button" id="clear">
+
+        </div>
+        <div class="inputs__button" id="decimal">
+
+        </div>
 
 
     </div>
