buttons now con.log. had to change h2 to buttons

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <h2 class="inputs__label">-</h2>
       </div>
 
-      <div class="inputs__button" id="1">
-        <h2 class="inputs__label">1</h2>
+      <div class="inputs__button" >
+        <button value="1" id="1" class="inputs__label">1</button>
       </div>
 
       <div class="inputs__button" id="2">
