--- a/index.html
+++ b/index.html
@@ -27,20 +27,44 @@
     </div>
 
     <div class="inputs">
-      <div class="inputs__container inputs__container--color-one">
-        <button class="inputs__button" value="AC" id="AC">AC</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-one"
+          value="AC"
+          id="AC"
+        >
+          AC
+        </button>
       </div>
 
-      <div class="inputs__container inputs__container--color-one">
-        <button class="inputs__button" value="+-" id="plus-minus">+-</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-one"
+          value="+-"
+          id="plus-minus"
+        >
+          +-
+        </button>
       </div>
 
-      <div class="inputs__container inputs__container--color-one">
-        <button class="inputs__button" value="%" id="percentage">%</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-one"
+          value="%"
+          id="percentage"
+        >
+          %
+        </button>
       </div>
 
-      <div class="inputs__container inputs__container--color-two">
-        <button class="inputs__button" value="/" id="divide">/</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-two"
+          value="/"
+          id="divide"
+        >
+          /
+        </button>
       </div>
 
       <div class="inputs__container">
@@ -55,8 +79,14 @@
         <button class="inputs__button" value="9" id="9">9</button>
       </div>
 
-      <div class="inputs__container inputs__container--color-two">
-        <button class="inputs__button" value="x" id="multiply">x</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-two"
+          value="x"
+          id="multiply"
+        >
+          x
+        </button>
       </div>
 
       <div class="inputs__container">
@@ -71,8 +101,14 @@
         <button class="inputs__button" value="6" id="6">6</button>
       </div>
 
-      <div class="inputs__container inputs__container--color-two">
-        <button class="inputs__button" value="-" id="subtract">-</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-two"
+          value="-"
+          id="subtract"
+        >
+          -
+        </button>
       </div>
 
       <div class="inputs__container">
@@ -87,8 +123,14 @@
         <button class="inputs__button" value="3" id="3">3</button>
       </div>
 
-      <div class="inputs__container inputs__container--color-two">
-        <button class="inputs__button" value="+" id="add">+</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-two"
+          value="+"
+          id="add"
+        >
+          +
+        </button>
       </div>
 
       <div class="inputs__container">
@@ -103,8 +145,14 @@
         <button class="inputs__button" value="." id="decimal">.</button>
       </div>
 
-      <div class="inputs__container inputs__container--color-two">
-        <button class="inputs__button" value="=" id="equals">=</button>
+      <div class="inputs__container">
+        <button
+          class="inputs__button inputs__button--color-two"
+          value="="
+          id="equals"
+        >
+          =
+        </button>
       </div>
     </div>
 
