--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
 
       <div class="display__bottom">
-        <div class="display__memory">1234</div>
-        <div class="display__current">1234</div>
+        <div class="display__memory">MEMORY</div>
+        <div class="display__current"></div>
       </div>
     </div>
 
