fixed memory display. will now hold current

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="inputs__container">
         <button
           class="inputs__button inputs__button--color-two"
-          value="/"
+          value="÷"
           id="divide"
         >
-          /
+          ÷
         </button>
       </div>
 
