TEST for dark mode and minus sign (slight working)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body">
+    <!-- ------------------------------- Display ------------------------------- -->
+    
     <div class="display">
       <div class="display__top">
         <div class="display__options">
@@ -21,10 +23,12 @@
       </div>
 
       <div class="display__bottom">
-        <div class="display__memory">MEMORY</div>
+        <div class="display__memory"></div>
         <div class="display__current"></div>
       </div>
     </div>
+
+    <!-- ------------------------------- Inputs -------------------------------- -->
 
     <div class="inputs">
       <div class="inputs__container">
@@ -40,7 +44,7 @@
       <div class="inputs__container">
         <button
           class="inputs__button inputs__button--color-one"
-          value="+-"
+          value="-"
           id="plus-minus"
         >
           +-
